<resources>
	<string name="app_name" translatable="false">ImgurViewer</string>
	<string name="imgur_client_id" translatable="false">912617e18339d56</string>
	<string name="flickr_key" translatable="false">2ba8fd93b3d6443c8c8b8f277770bf6e</string>
	<string name="giphy_api_key" translatable="false">dc6zaTOxFJmzC</string>
	<string name="version">Version</string>
	<string name="settings">Settings</string>
	<string name="general">General</string>
	<string name="hacks">Hacks</string>
	<string name="gestures">Gestures</string>
	<string name="gallery">Gallery</string>
	<string name="videos">Videos</string>
	<string name="proxy">Proxy</string>
	<string name="actions">Actions</string>
	<string name="proxyHost">Proxy Host</string>
	<string name="proxyPort">Proxy Port</string>
	<string name="share">Share</string>
	<string name="shareUsing">Share using&#8230;</string>
	<string name="videoRemoved">"Video removed."</string>
	<string name="videoUrlNotFound">Video URL not found.</string>
	<string name="could_not_resolve_url">Couldn\'t resolve image URL.</string>
	<string name="could_not_resolve_video_url">Couldn\'t resolve video URL.</string>
	<string name="could_not_resolve_album_url">Couldn\'t resolve album URL.</string>
	<string name="seconds_abbr">s</string>
	<string name="tutorial">How to use ImgurViewer?</string>
	<string name="tutorial_open">Or you can tap on any image, Imgur album or clip video link from an external application.</string>
	<string name="tutorial_open_with">Select ImgurViewer to open the link.</string>
	<string name="tutorial_that_is_it">That\'s it!\nImgurViewer is designed to open image and video links from external applications.\nThat\'s the only purpose.</string>
	<string name="tutorial_next">Next</string>
	<string name="tutorial_ended">Enjoy!</string>
	<string name="unknown_error">Unknown Error</string>
	<string name="muteVideos">Mute Videos</string>
	<string name="muteVideosConf">Mute videos by default</string>
	<string name="clearCache">Clear Cache</string>
	<string name="clearCacheConf">Clear application image cache</string>
	<string name="cacheCleared">Image cache cleared</string>
	<string name="errorLoadingAlbum">Error loading album</string>
	<string name="failedFetchProfile">Failed to fetch profile</string>
	<string name="gesturesEnabled">Gestures Enabled</string>
	<string name="gesturesEnabledConf">Enable swipe gestures</string>
	<string name="gesturesImageView">Image View Swipe</string>
	<string name="gesturesImageViewConf">Discard swipe gesture for image/video view</string>
	<string name="gesturesGalleryView">Gallery View Swipe</string>
	<string name="gesturesGalleryViewConf">Discard swipe gesture for gallery view</string>
	<string name="defaultGalleryViewStyle">Default Gallery View style</string>
	<string name="defaultGalleryViewStyleConf">Select between List and Grid view</string>
	<string name="gridViewColumns">Grid view number of columns</string>
	<string name="gridViewColumnsConf">Select a value between 1 and 10</string>
	<string name="thumbnailsOnGallery">Thumbnails on Gallery</string>
	<string name="thumbnailsOnGalleryConf">Use thumbnails of the original images, otherwise load the full image</string>
	<string name="thumbnailsSizeOnGallery">Imgur Thumbnail Size</string>
	<string name="thumbnailsSizeOnGalleryConf">Select the default thumbnail size used to display images for Imgur albums and galleries</string>
	<string name="keepNavigationVisible">Keep Navigation Bar Visible</string>
	<string name="keepNavigationVisibleConf">Don\'t auto-hide the navigation bar when fullscreen mode enables.</string>
	<string name="disableWindowTransparency">Rotation Fix</string>
	<string name="disableWindowTransparencyConf">Disables Window Transparency: From Android 8 and up, transparent windows inherit the orientation configuration from the previous view. If you are having problems rotating the screen on this application it\'s because of this. Since most applications don\'t force portrait mode this usually is a non-problem, but enable this if you\'re having this issue.</string>
	<string name="listViewImageScaleType">List View Image Scale Type</string>
	<string name="gridViewImageScaleType">Grid View Image Scale Type</string>
	<string name="vertical">VERTICAL</string>
	<string name="horizontal">HORIZONTAL</string>
	<string name="left">LEFT</string>
	<string name="right">RIGHT</string>
	<string name="top">TOP</string>
	<string name="bottom">BOTTOM</string>
	<string name="listView">List View</string>
	<string name="gridView">Grid View</string>
	<string name="share_as">Share as…</string>
	<string name="could_not_detect_mime_type">Sorry, something went wrong, can\'t share as media. Please share as text.</string>
	<string-array name="share_as_type">
		<item>Media (send image or video)</item>
		<item>Text (send link)</item>
	</string-array>
	<string-array name="gallery_view_arr">
		<item>@string/listView</item>
		<item>@string/gridView</item>
	</string-array>
	<string-array name="gallery_view_val">
		<item>0</item>
		<item>1</item>
	</string-array>
	<string-array name="gestures_arr">
		<item>@string/vertical</item>
		<item>@string/horizontal</item>
		<item>@string/left</item>
		<item>@string/right</item>
		<item>@string/top</item>
		<item>@string/bottom</item>
	</string-array>
	<string name="vertical_val">4</string>
	<string name="horizontal_val">5</string>
	<string name="left_val">0</string>
	<string name="right_val">1</string>
	<string name="top_val">2</string>
	<string name="bottom_val">3</string>
	<string-array name="gestures_types">
		<item>@string/vertical_val</item>
		<item>@string/horizontal_val</item>
		<item>@string/left_val</item>
		<item>@string/right_val</item>
		<item>@string/top_val</item>
		<item>@string/bottom_val</item>
	</string-array>
	<string name="list_view_default_scale_type" translatable="false">FIT_CENTER</string>
	<string name="grid_view_default_scale_type" translatable="false">CENTER_CROP</string>
	<string-array name="scale_types_names">
		<item>FIT XY</item>
		<item>FIT X</item>
		<item>FIT Y</item>
		<item>FIT START</item>
		<item>FIT CENTER</item>
		<item>FIT END</item>
		<item>CENTER</item>
		<item>CENTER INSIDE</item>
		<item>CENTER CROP</item>
		<item>FOCUS CROP</item>
		<item>FIT BOTTOM START</item>
	</string-array>
	<string-array name="scale_types_values" translatable="false">
		<item>FIT_XY</item>
		<item>FIT_X</item>
		<item>FIT_Y</item>
		<item>FIT_START</item>
		<item>FIT_CENTER</item>
		<item>FIT_END</item>
		<item>CENTER</item>
		<item>CENTER_INSIDE</item>
		<item>CENTER_CROP</item>
		<item>FOCUS_CROP</item>
		<item>FIT_BOTTOM_START</item>
	</string-array>
	<string-array name="thumbnail_sizes_names">
		<item>Full Image</item>
		<item>Small Square (90×90)</item>
		<item>Big Square (160×160)</item>
		<item>Small Thumbnail (160×160)</item>
		<item>Medium Thumbnail (320×320)</item>
		<item>Large Thumbnail (640×640)</item>
		<item>Huge Thumbnail (1024×1024)</item>
	</string-array>
	<string-array name="thumbnail_sizes_values" translatable="false">
		<item></item>
		<item>s</item>
		<item>b</item>
		<item>t</item>
		<item>m</item>
		<item>l</item>
		<item>h</item>
	</string-array>
	<string name="thumbnail_sizes_default" translatable="false">l</string>
	<string name="screenLockEnabled">Screen-Lock Option</string>
	<string name="screenLockEnabledConf">Allows to lock/unlock the image/video view.</string>
	<string name="fullScreenEnabled">Fullscreen Option</string>
	<string name="fullScreenEnabledConf">Allows a fullscreen button on image/video view.</string>
	<string name="cantDisplayResourceNoPermission">Sorry, can\'t display resource without proper permissions.</string>
	<string name="cantDownloadNoPermission">Sorry, can\'t download resource/s without proper permissions.</string>
	<string name="cantShareNoPermission">Sorry, can\'t share resource/s without proper permissions.</string>
	<string name="couldNotReproduceVideo">Sorry, video reproduction failed.</string>
	<string name="textPaste">Paste the link here</string>
	<string name="textPastView">You can paste any supported image/video link to visualize it</string>
	<string name="resourceInvalid">Loaded resource is not a valid image.</string>
	<string name="invalidUrl">Invalid URL</string>
</resources>
